--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "@mantine/carousel": "^6.0.1",
     "@mantine/core": "^5.10.5",
     "@mantine/hooks": "^5.10.5",
     "@modulz/radix-icons": "^4.0.0",
     "axios": "^1.3.4",
     "cloudinary-react": "^1.8.1",
+    "embla-carousel-react": "^7.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.2",
